apps/base/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant-v1
  template:
    metadata:
      labels:
        app: home-assistant-v1
        try: "0"
    spec:
      # securityContext:
      #   runAsUser: 3000
      #   runAsGroup: 3000
      #   fsGroup: 3000

      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2024.6

          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 0

          # envFrom:
          #   - configMapRef:
          #       name: home-assistant-configmap

          ports:
            - containerPort: 8123
              protocol: TCP

          volumeMounts:
            - name: home-assistant-config
              mountPath: /config

      restartPolicy: Always

      volumes:
        - name: home-assistant-config
          persistentVolumeClaim:
            claimName: home-assistant-config-v1
