apps/base/home-assistant/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
    - port: 8123
  selector:
    app: home-assistant
  type: ClusterIP
