apps/base/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: home-assistant
spec:
  ingressClassName: traefik
  rules:
    - host: ass.mischavandenburg.net
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 8123
            path: /
            # pathType: Prefix
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - ass.mischavandenburg.net
      secretName: home-assistant-ingress-production
